--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "final-project",
+  "name": "chess-app",
   "version": "1.0.0",
   "private": true,
-  "description": "A full stack JavaScript solo project.",
+  "description": "Chess app I built for fun",
   "main": "server/index.js",
   "scripts": {
     "build": "webpack",
