--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     ]
   },
   "dependencies": {
+    "@chrisoakman/chessboardjs": "^1.0.0",
     "argon2": "^0.27.1",
+    "chess.js": "^0.11.0",
     "chessboardjsx": "^2.4.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -41,6 +43,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-react-jsx": "^7.12.12",
+    "@types/chess.js": "^0.10.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "eslint": "^7.17.0",
